feat: implement web client instead of process builder with the python endpont 745